upgrade to java 21 - #523